--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
   <main class="main-content" [id]="platformService.isMobile() ? 'main-content' : ''">
     <router-outlet></router-outlet>
   </main>
+  
+  <!-- Build Info (only in development) -->
+  <app-build-info></app-build-info>
 </div>
