--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -127,6 +127,11 @@
       </ng-template>
     </section>
   </div>
+
+  <!-- Build Info (only in development) -->
+  <div class="build-info-label" *ngIf="showBuildInfo">
+    <span class="build-text">Build #{{ buildInfo.buildNumber }} | v{{ buildInfo.version }} | {{ formatBuildDate(buildInfo.buildDate) }}</span>
+  </div>
 </div>
 
 <div class="loading-container" *ngIf="loading">
