--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -254,6 +254,9 @@
     </div>
     <div class="footer-bottom">
       <p>&copy; 2025 HourBank. Building communities through skill sharing and time banking.</p>
+      <div class="build-info">
+        <span class="build-text">Build #{{ buildInfo.buildNumber }} | v{{ buildInfo.version }} | {{ formatBuildDate(buildInfo.buildDate) }}</span>
+      </div>
     </div>
   </div>
 </footer>
