--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -1,4 +1,7 @@
 <div class="transaction-container">
+  <!-- Sample Data Watermark -->
+  <app-sample-data-watermark position="corner"></app-sample-data-watermark>
+  
   <!-- Header -->
   <header class="transaction-header">
     <h1>My Transactions</h1>
